<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="@dimen/activity_horizontal_margin"
    android:paddingVertical="@dimen/activity_vertical_margin"
    android:focusable="false"
    android:fillViewport="true"
...
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="false">

    <TextView
        android:id="@+id/countUpDisplay"
        android:layout_width="0dp"
        android:layout_height="@dimen/display_text_view_adjusted_height"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:ellipsize="end"
        android:focusable="true"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpUsage,DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/countdownDisplay"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="@dimen/button_padding"
        android:background="?attr/selectableItemBackground"
        android:focusable="true"
        android:fontFamily="@font/roboto"
        android:fontFeatureSettings="tnum"
        android:gravity="right|center_vertical"
        android:maxLines="1"
        android:minHeight="@dimen/countdown_text_size"
        android:nextFocusRight="@id/pauseResumeButton"
        android:nextFocusForward="@id/pauseResumeButton"
        android:paddingLeft="@dimen/countdown_padding"
        android:paddingRight="@dimen/countdown_padding"
        android:text="@string/time0"
        android:textColor="@color/countdown_colors"
        android:textSize="@dimen/countdown_text_size"
...
            android:contentDescription="@string/start_pause"
            android:drawableLeft="@drawable/ic_play"
            android:drawableTint="@color/button_tint_color"
            android:focusable="true" />

        <Button
            android:id="@+id/resetButton"
            style="?attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/button_margin"
            android:layout_marginRight="@dimen/button_margin"
            android:contentDescription="@string/reset"
            android:drawableLeft="@drawable/ic_replay"
            android:drawableTint="@color/button_tint_color"
            android:focusable="true" />

        <Button
            android:id="@+id/stopButton"
            style="?attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/stop"
            android:drawableLeft="@drawable/ic_stop"
            android:drawableTint="@color/button_tint_color"
            android:focusable="true"
            android:nextFocusForward="@id/enableReminders" />
    </LinearLayout>

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/fold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...
        android:minWidth="88dp"
        android:maxWidth="488dp"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense"
        android:hint="@string/interval_hint"
        app:hintTextAppearance="@style/HintTextAppearance"
        app:startIconDrawable="@drawable/ic_baseline_arrow_drop_up_48"
        app:startIconContentDescription="@string/intervals_menu"
        app:layout_constraintTop_toBottomOf="@id/fold"
        app:layout_constraintBottom_toBottomOf="@+id/enableReminders"
        app:layout_constraintVertical_bias="0.5"
        app:layout_constraintEnd_toEndOf="parent">

        <com.onefishtwo.bbqtimer.EditText2
            android:id="@+id/alarmPeriod"
            style="@style/Widget.App.EditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:gravity="right"
            android:importantForAutofill="no"
...
