...
    <string name="intervals_menu">Intervals menu</string>

    <!-- Menu command to edit the pop-up list of "recipes" of alarm intervals with optional notes. -->
    <string name="edit_this_list">Edit these intervals…</string>

    <!-- Title for the dialog to edit "recipes" of alarm intervals with optional notes. -->
    <string name="edit_list_title">Alarm intervals</string>

    <!-- Hint for what to type into the recipe editor. -->
    <string name="edit_list_hint">m, m:s, or h:m:s with optional notes</string>

    <!-- "Save edits" button in the recipe editor. -->
    <string name="save_edits">Save</string>

    <!-- "Cancel edits" button in the recipe editor. -->
    <string name="cancel_edits">Cancel</string>

    <!-- ActionBar's "Device is locked" menu item.
      The menu item has showAsAction="always", i.e. always display as an icon in the app bar.
      Long-pressing the item shows this item name string in a popup hint. It might also appear to a
      screen reader. -->
    <string name="action_locked">Device is locked</string>
...
