<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingStart="12dp"
    android:paddingEnd="12dp"
    android:paddingTop="8dp">

    <TextView
        android:id="@+id/recipes_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:gravity="center_horizontal"
        android:maxLines="1"
        android:text="@string/edit_list_title"
        android:textColor="@color/md_theme_secondaryContainer"
        android:textSize="@dimen/controls_text_size"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/recipes_text_field_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:minWidth="88dp"
        android:hint="@string/edit_list_hint">

        <com.onefishtwo.bbqtimer.EditText2
            android:id="@+id/recipes_text_field"
            style="@style/Widget.App.EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="true"
            android:gravity="start|top"
            android:importantForAutofill="no"
            android:inputType="textMultiLine|textNoSuggestions"
            android:maxLength="2000"
            android:minLines="3"
            android:paddingStart="8dp"
            android:paddingTop="8dp"
            android:paddingEnd="8dp"
            android:paddingBottom="8dp"
            android:scrollbars="vertical" />
    </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>
